# watson-machine-learning-samples

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  requirements.txt
applications/: README.md
applications/cars-4-you/: README.md  WS_PROJECT_SETUP.md  manifest.yml  nlu_utils.py  requirements.txt  run_service.sh  server.py  wml_utils.py
applications/go-digits/: README.md  Tutorial.md
applications/product-line-predictions/: NOTICE  README.md  manifest.yml.template  package-lock.json  package.json
cloud/: README.md
cloud/ai-service-templates/function-calling/: CHANGES.rst  LICENSE  README.md  ai_service.py  config.toml  pyproject.toml  utils.py
cloud/ai-service-templates/function-calling/examples/: execute_ai_service_locally.py  query_existing_deployment.py
cloud/ai-service-templates/function-calling/scripts/: build_package.py  deploy.py
cloud/ai-service-templates/function-calling/src/ai_service_function_calling/: __init__.py  agent.py  tools.py
cloud/ai-service-templates/function-calling/tests/: test_tools.py
cloud/ai-service-templates/langgraph-react-agent/: CHANGES.rst  README.md  ai_service.py  config.toml  pyproject.toml  utils.py
cloud/ai-service-templates/langgraph-react-agent/examples/: _interactive_chat.py  execute_ai_service_locally.py  query_existing_deployment.py
cloud/ai-service-templates/langgraph-react-agent/schema/: request.json  response.json
cloud/ai-service-templates/langgraph-react-agent/scripts/: deploy.py
cloud/ai-service-templates/langgraph-react-agent/src/langgraph_react_agent/: __init__.py  agent.py  tools.py
cloud/ai-service-templates/langgraph-react-agent/tests/: test_tools.py
cloud/configs/: config.yaml
cloud/notebooks/: README.md
cloud/utils/: rag_evaluator.py
cpd4.0/: README.md
cpd4.8/: README.md
notebooks/: README.md
(+1203 files in other folders)
