[tool.poetry]
name = "langgraph_react_agent"
version = "0.1.4"
description = "A template for a LangGraph LLM app deployable on IBM Cloud as an ai_service. This particular example focues on a WatsonX chatbot enhanced with external tools (function calling)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "langgraph_react_agent", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
langchain-ibm = "^0.3.3"
python-dotenv = "^1.0.1"
ibm-watsonx-ai = { version = ">=1.1.22", python = ">=3.11,<3.13" }
langgraph = ">0.2,<0.3"
statsmodels = "^0.14.4"
numpy = "<2"
pytest = "^8.3.3"
pyarrow = "^19.0.0"
duckduckgo-search = "^7.3.0"
langchain-community = "^0.3.16"
arxiv = "^2.1.3"
markdownify = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
